some examples are added. (currently, the notebook is not clean)

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -5537,6 +5537,332 @@
     "!javac TestStringEx1.java\n",
     "!java TestStringEx1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestStringEx2.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestStringEx2.java\n",
+    "\n",
+    "public class TestStringEx2 {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        String data = \"Aaa\";\n",
+    "        System.out.println(data.matches(\"[A-Z]{1}[a-z]{3}\"));\n",
+    "        System.out.println(data.matches(\"[A-Z]{1}[a-z]{2}\"));\n",
+    "        \n",
+    "        System.out.println();\n",
+    "        \n",
+    "        data = \"AAAA123\";\n",
+    "        System.out.println(data.matches(\"[A-Z]{3}\"));\n",
+    "        System.out.println(data.matches(\"[A-Z]*\"));\n",
+    "        System.out.println(data.matches(\"[A-Z]*[0-9]*\"));\n",
+    "        //System.out.println(data.matches('\\D')    );    //??\n",
+    "        \n",
+    "        System.out.println();\n",
+    "        \n",
+    "        data = \"123789\";\n",
+    "        \n",
+    "\n",
+    "        //Integer a=new Integer(data);\n",
+    "        //System.out.println(a.parseInt(data) );\n",
+    "        \n",
+    "        int val=Integer.parseInt(data);\n",
+    "        System.out.println(val);\n",
+    "\n",
+    "        Integer a=new Integer(data);\n",
+    "        val=a.intValue();\n",
+    "        System.out.println(val);\n",
+    "        \n",
+    "        Integer b=1;  //test:autoboxing\n",
+    "        System.out.println(b.intValue());\n",
+    "        \n",
+    "        int c=b;      //test:unboxing\n",
+    "        System.out.println(b+1);\n",
+    "        \n",
+    "        \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n",
+      "true\n",
+      "\n",
+      "false\n",
+      "false\n",
+      "true\n",
+      "\n",
+      "123789\n",
+      "123789\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestStringEx2.java\n",
+    "!java TestStringEx2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "learn the use of Jar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Es ist kalt!\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd C:\\Users\\Student\\Desktop\\notebooks\n",
+    "!java -jar myproj.jar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 2.0\n",
+      "radius are not equal\n"
+     ]
+    }
+   ],
+   "source": [
+    "!java -cp \"C:\\Users\\Student\\Desktop\\notebooks\\myproj.jar\" tw.chweng.myproject.common.testt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remark: the idea of \"encapsulation\" is to set class variables as \"private\" and access or set them using the method within that class, if doing so is necessary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestExtends.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestExtends.java\n",
+    "\n",
+    "class parent{\n",
+    "    void sayHi(){\n",
+    "        System.out.println(\"Hi\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class child extends parent{\n",
+    "        void sayHi(){\n",
+    "        System.out.println(\"I'm not going to say hi. I'll say hello.\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "    \n",
+    "    \n",
+    "public class TestExtends extends parent {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "        child a=new child();\n",
+    "        a.sayHi();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm not going to say hi. I'll say hello.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestExtends.java\n",
+    "!java TestExtends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestBanking.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestBanking.java\n",
+    "\n",
+    "class Banking{\n",
+    "    \n",
+    "    private int amount=0;\n",
+    "    \n",
+    "    void deposit(int moneyIn){\n",
+    "        amount=amount+moneyIn;\n",
+    "    }\n",
+    "    void withdraw(int moneyOut){\n",
+    "        amount=amount-moneyOut;\n",
+    "    }\n",
+    "    \n",
+    "    void showAmount(){\n",
+    "        System.out.println(\"Now you have \"+amount+\" in the bank\");\n",
+    "    }\n",
+    "    int getAmount(){\n",
+    "        return amount;\n",
+    "    }\n",
+    "    void setAmount(int amount){\n",
+    "        this.amount=amount;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class ATM extends Banking{\n",
+    "    \n",
+    "    void buyFunds(int moneyOut){\n",
+    "        if(super.getAmount()<moneyOut){\n",
+    "            System.out.println(\"No enough money to buy funds\");\n",
+    "        }\n",
+    "        else{System.out.println(\"You have bought the funds you wish\");\n",
+    "             super.setAmount(super.getAmount()-moneyOut);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "    \n",
+    "public class TestBanking {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "        ATM aPerson=new ATM();\n",
+    "        aPerson.deposit(3000);\n",
+    "        aPerson.showAmount();\n",
+    "        aPerson.withdraw(2000);\n",
+    "        aPerson.showAmount();\n",
+    "        aPerson.buyFunds(1000);\n",
+    "        aPerson.showAmount();\n",
+    "        aPerson.buyFunds(1);\n",
+    "        aPerson.showAmount();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now you have 3000 in the bank\n",
+      "Now you have 1000 in the bank\n",
+      "You have bought the funds you wish\n",
+      "Now you have 0 in the bank\n",
+      "No enough money to buy funds\n",
+      "Now you have 0 in the bank\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestBanking.java\n",
+    "!java TestBanking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-140-2d9831b25513>, line 23)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-140-2d9831b25513>\"\u001b[1;36m, line \u001b[1;32m23\u001b[0m\n\u001b[1;33m    def __init__(self, Name=\", Age=0):\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
