some example codes are added. (not clean yet)

--- a/Java_Basics.ipynb
+++ b/Java_Basics.ipynb
@@ -5683,7 +5683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -5706,6 +5706,7 @@
     "}\n",
     "\n",
     "class child extends parent{\n",
+    "        @Override\n",
     "        void sayHi(){\n",
     "        System.out.println(\"I'm not going to say hi. I'll say hello.\");\n",
     "    }\n",
@@ -5725,7 +5726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -5839,21 +5840,615 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-140-2d9831b25513>, line 23)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-140-2d9831b25513>\"\u001b[1;36m, line \u001b[1;32m23\u001b[0m\n\u001b[1;33m    def __init__(self, Name=\", Age=0):\u001b[0m\n\u001b[1;37m                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestEquals.java\n"
      ]
     }
    ],
+   "source": [
+    "%%file TestEquals.java\n",
+    "\n",
+    "public class TestEquals extends parent {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        String food0=\"spaghetti\";\n",
+    "        String food1=new String(\"spaghetti\");\n",
+    "        String food2=new String(\"spaghetti\");\n",
+    "        System.out.println(food1==food2);\n",
+    "        System.out.println(food1.equals(food2));\n",
+    "        System.out.println(food0.equals(food0));\n",
+    "        \n",
+    "        System.out.println();\n",
+    "        \n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n",
+      "true\n",
+      "true\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestEquals.java\n",
+    "!java TestEquals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestPolymorphismEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestPolymorphismEx1.java\n",
+    "\n",
+    "class Mammal{\n",
+    "    public static void play(Mammal m){\n",
+    "\t\tm.happy();\n",
+    "\t}\n",
+    "\t\n",
+    "\tpublic void happy(){\n",
+    "\t\tSystem.out.println(\"happy\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "class Cat extends Mammal{\n",
+    "\tpublic void happy(){\n",
+    "\t\tSystem.out.println(\"Meow happy\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "public class CallTestPolymorphism {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tCat kitty = new Cat();\n",
+    "\t\tlittlekitty=(Mammal)kitty;\n",
+    "        littlekitty.happy;\n",
+    "\t}\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestPolymorphism.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestPolymorphism.java\n",
+    "\n",
+    "class Mammal{\n",
+    "    private int g=5;\n",
+    "\tpublic void happy(int i){\n",
+    "\t\tSystem.out.println(\"happy\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "class Cat extends Mammal{\n",
+    "\tpublic void happy(){\n",
+    "\t\tSystem.out.println(\"Meow happy\");\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "public class CallTestPolymorphism {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "        Mammal kitty= new Cat();\n",
+    "        //kitty.happy(1);\n",
+    "        kitty.happy();\n",
+    "        if(kitty instanceof Cat){System.out.println(\"I'm a instance of cat\");}\n",
+    "        else{System.out.println(\"I'm a instance of Mammal\");}\n",
+    "\t\t//Mammal littlekitty=(Mammal)kitty;\n",
+    "        //littlekitty.happy();\n",
+    "    }\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CallTestPolymorphism.java:20: error: method happy in class Mammal cannot be applied to given types;\n",
+      "        kitty.happy();\n",
+      "             ^\n",
+      "  required: int\n",
+      "  found: no arguments\n",
+      "  reason: actual and formal argument lists differ in length\n",
+      "1 error\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm a instance of cat\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac CallTestPolymorphism.java\n",
+    "!java CallTestPolymorphism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestSingletonEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestSingletonEx1.java\n",
+    "\n",
+    "class TestSingletonEx1 {\n",
+    "\tprivate String name = \"john\";\n",
+    "\tprivate static TestSingletonEx1 ref2 = null;\n",
+    "\tprivate static final TestSingletonEx1 ref3 = new TestSingletonEx1();\n",
+    "\n",
+    "\tprivate TestSingletonEx1() {\n",
+    "\t}\n",
+    "\n",
+    "\tpublic void showMessage() {\n",
+    "\t\tSystem.out.println(\"You've got a mail:\" + name);\n",
+    "\t}\n",
+    "\n",
+    "\tpublic static TestSingletonEx1 getRef1() {\n",
+    "\t\tTestSingletonEx1 ref1 = new TestSingletonEx1();\n",
+    "\t\treturn ref1;\n",
+    "\t}\n",
+    "\t\n",
+    "\tpublic static TestSingletonEx1 getRef2(){\n",
+    "        if(ref2==null){\n",
+    "        \tref2 = new TestSingletonEx1();\n",
+    "        }\n",
+    "        return ref2;\n",
+    "\t}\n",
+    "\t\n",
+    "\tpublic static TestSingletonEx1 getRef3() {\n",
+    "\t\treturn ref3;\n",
+    "\t}\n",
+    "}\n",
+    "\n",
+    "public class CallTestSingletonEx1 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\t// TestSingletonEx1 singleton = new TestSingletonEx1();\n",
+    "\t\t\n",
+    "        //TestSingletonEx1 obj1 = TestSingletonEx1.getRef1();\n",
+    "\t\t//obj1.showMessage();\n",
+    "\t\t\n",
+    "\t\tTestSingletonEx1 obj2 = TestSingletonEx1.getRef2();\n",
+    "\t\tobj2.showMessage();\n",
+    "        \n",
+    "\t\tTestSingletonEx1 obj3 = TestSingletonEx1.getRef2();\n",
+    "\t\tobj3.showMessage();\n",
+    "        \n",
+    "\t\t\n",
+    "\t\t//TestSingletonEx1 obj3 = TestSingletonEx1.getRef3();\n",
+    "\t\t//obj3.showMessage();\n",
+    "\t}\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You've got a mail:john\n",
+      "You've got a mail:john\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac CallTestSingletonEx1.java\n",
+    "!java CallTestSingletonEx1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestTryCatch.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestTryCatch.java\n",
+    "\n",
+    "public class TestTryCatch extends Exception{\n",
+    "    public String getMessage(){\n",
+    "         return \"hey\";\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        int a[]={0, 1, 2};\n",
+    "        \n",
+    "        try{\n",
+    "            for(int i=0;i<=3;i++){\n",
+    "                System.out.println(a[i]);\n",
+    "            }\n",
+    "        }catch(ArithmeticException err){\n",
+    "                System.out.println(\"error1!\");\n",
+    "\n",
+    "        }catch(Exception err){\n",
+    "                System.out.println(\"error2!\");\n",
+    "                System.out.println(err);\n",
+    "                String aa=err.getMessage();\n",
+    "                System.out.println(aa);\n",
+    "         }\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "error2!\n",
+      "java.lang.ArrayIndexOutOfBoundsException: 3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestTryCatch.java\n",
+    "!java TestTryCatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestTryCatch.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestTryCatch.java\n",
+    "\n",
+    "public class TestTryCatch extends Exception{\n",
+    "    public String getMessage(){\n",
+    "         return \"hey\";\n",
+    "    }\n",
+    "    public static void main(String[] args) {\n",
+    "        int a[]={0, 1, 2};\n",
+    "        \n",
+    "        try{\n",
+    "            for(int i=0;i<=3;i++){\n",
+    "                System.out.println(a[i]);\n",
+    "            }\n",
+    "        }catch(ArithmeticException err){\n",
+    "                System.out.println(\"error1!\");\n",
+    "\n",
+    "        }catch(Exception err){\n",
+    "                System.out.println(\"error2!\");\n",
+    "                System.out.println(err);\n",
+    "                String aa=err.getMessage();\n",
+    "                System.out.println(aa);\n",
+    "                System.exit(-1);\n",
+    "         }finally{System.out.println(\"hmm...\");}\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "error2!\n",
+      "java.lang.ArrayIndexOutOfBoundsException: 3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestTryCatch.java\n",
+    "!java TestTryCatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestTryCatch.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestTryCatch.java\n",
+    "\n",
+    "public class TestTryCatch {\n",
+    "\n",
+    "\tpublic void division(int x, int y) throws Exception {\n",
+    "\t\tSystem.out.println(\"x/y=\" + x/y);\n",
+    "\t}\n",
+    "\t\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tTestTryCatch except3 = new TestTryCatch();\n",
+    "\t\ttry {\n",
+    "\t\t\texcept3.division(6, 0);\n",
+    "\n",
+    "\t\t} catch (Exception e) {\n",
+    "\t\t\t//e.printStackTrace();\n",
+    "            System.out.println(\"hi\");\n",
+    "            System.out.println(e);\n",
+    "\t\t}finally{;}\n",
+    "\t}\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n",
+      "java.lang.ArithmeticException: / by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestTryCatch.java\n",
+    "!java TestTryCatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://onedrive.live.com/?authkey=%21AFcoDENT8TgjICw&id=AF483E7E8FEC387B%211935&cid=AF483E7E8FEC387B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting CallTestMyOwnExceptionEx1.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file CallTestMyOwnExceptionEx1.java\n",
+    "\n",
+    "class MyOwnException extends Exception {\n",
+    "\n",
+    "\tprivate static final long serialVersionUID = 1L;\n",
+    "\tprivate String serverName = \"Blade\";\n",
+    "\tprivate int port = 12345;\n",
+    "\tprivate String errMeg = \"System Error\";\n",
+    "\n",
+    "\tpublic MyOwnException(String serverName, int port, String errMeg) {\n",
+    "\t\tthis.serverName = serverName;\n",
+    "\t\tthis.port = port;\n",
+    "\t\tthis.errMeg = errMeg;\n",
+    "\t}\n",
+    "\n",
+    "\tpublic void showInfo() {\n",
+    "\t\tSystem.out.println(\"Server Name:\" + serverName);\n",
+    "\t\tSystem.out.println(\"Server Port:\" + port);\n",
+    "\t\tSystem.out.println(\"Error Message:\" + errMeg);\n",
+    "\t}\n",
+    "\n",
+    "}\n",
+    "\n",
+    "public class CallTestMyOwnExceptionEx1 {\n",
+    "\n",
+    "\tpublic static void main(String[] args) {\n",
+    "\t\tint index = 2;\n",
+    "\t\tif (index % 2 == 0) {\n",
+    "\t\t\ttry {throw new MyOwnException(\"Deep Blue\", 80, \"System unexpect shutdown\");\n",
+    "\t\t\t\t\n",
+    "\t\t\t} catch (MyOwnException e) {\n",
+    "\t\t\t\te.showInfo();\n",
+    "\t\t\t}\n",
+    "\t\t} else {\n",
+    "\t\t\tSystem.out.println(\"action processing ...\");\n",
+    "\t\t}\n",
+    "\t}\n",
+    "\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Server Name:Deep Blue\n",
+      "Server Port:80\n",
+      "Error Message:System unexpect shutdown\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac CallTestMyOwnExceptionEx1.java\n",
+    "!java CallTestMyOwnExceptionEx1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting TestAssertion.java\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file TestAssertion.java\n",
+    "\n",
+    "public class TestAssertion {\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "\n",
+    "        int a=0,b=0;\n",
+    "        \n",
+    "        assert(b!=0):\"Omg\";\n",
+    "        \n",
+    "        System.out.println(a/b);\n",
+    "        \n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread \"main\" java.lang.AssertionError: Omg\n",
+      "\tat TestAssertion.main(TestAssertion.java:8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!javac TestAssertion.java\n",
+    "!java -ea TestAssertion"
+   ]
   },
   {
    "cell_type": "code",
